# autogram

./: .cnb.yml  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Dockerfile  LICENSE  README-cn.md  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  sync.yml
.ide/: Dockerfile
get_me_db/: td.binlog
src/: main.rs
src/config/: args_conf.rs  log.rs  log_conf.rs  mod.rs
src/service/: akile_svc.rs  auth_svc.rs  chat_svc.rs  chats_svc.rs  create_account_listen_svc.rs  create_account_svc.rs  follow_svc.rs  guess_code_svc.rs  hello_svc.rs  init_svc.rs  listen_svc.rs  login_svc.rs  mod.rs  multi_create_account_listen_svc.rs  multi_listen_svc.rs  red_packet_svc.rs  signal_svc.rs
src/util/: http_util.rs  mod.rs
