[package]
name = "autogram"
version = "0.18.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "local-time"] }

time = "0.3.40"

tdlib-rs-gen = "1.0.5"
tdlib-rs-parser = "1.0.5"
tdlib-rs = { version = "1.0.5", features = [ "download-tdlib" ] }

clap = { version = "4.5.32", features = ["derive"] }

anyhow = "1.0.97"

reqwest = { version = "0.12.14", features = ["json"] }
