[package]
name = "autogram"
version = "0.21.5"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "local-time"] }

time = "0.3.41"

tdlib-rs-gen = "1.1.0"
tdlib-rs-parser = "1.1.0"
tdlib-rs = { version = "1.1.0", features = [ "download-tdlib" ] }

clap = { version = "4.5.39", features = ["derive"] }

anyhow = "1.0.98"

reqwest = { version = "0.12.19", features = ["json"] }
